syntax = "proto3";

package sf.substreams.v1.test;
option go_package = "github.com/streamingfast/substreams/pb/sf/substreams/v1/test/;pbsubstreamstest";

message Block {
  string id = 1;
  uint64 number = 2;
}

message MapResult {
  uint64 block_number = 1;
  string block_hash = 2;
}

message Boolean {
  bool result = 1;
}
